# syncer-backend

./: .gitignore  db.sql  example.env  pyproject.toml
protos/: auth.proto  clipboard.proto  message.proto
src/: database.py  environment.py  envs.py  main.py  security.py
src/api/v1/: routes.py
src/api/v1/endpoints/: auth.py  clipboard.py  me.py
src/core/: config.py  container.py  database.py  dependencies.py  metadata.py  middleware.py  security.py
src/grpc/: interceptors.py  message_servicer.py  server.py
src/models/: auth.py  client.py  clipboard.py  connection.py  platforms.py  token.py
src/models/exceptions/: database.py
src/repository/: __init__.py  auth_repository.py  clipboard_repository.py
src/schema/: __init__.py  auth_schema.py  clipboard_schema.py
src/services/: __init__.py  auth_service.py  clipboard_service.py
