[tool.poetry]
name = "syncer-api"
version = "0.1.0"
description = ""
authors = ["Ajeem Ahmad <ahmedazim7804@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.13"
loguru = "^0.7.3"
sqlmodel = "^0.0.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
